// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Artifacts/Artifact.proto";
import "Events/CommittedEvent.proto";
import "Events.Processing/ProcessorFailure.proto";
import "Events.Processing/RetryProcessingState.proto";

package dolittle.runtime.events.processing;

option csharp_namespace = "Dolittle.Runtime.Events.Processing";

message EventHandlerRuntimeToClientRequest {
    uint64 callNumber = 1;
    CommittedEvent event = 2;
    bytes partition = 3;
    RetryProcessingState retryProcessingState = 4;
    bytes executionContext = 5;
}

message EventHandlerArguments {
    bytes eventHandler = 1;
    repeated dolittle.runtime.artifacts.Artifact types = 2;
    bool partitioned = 3;
    bytes scope = 4;    
}

message EventHandlerClientToRuntimeResponse {
    uint64 callNumber = 1;
    ProcessorFailure failed = 2; // If not set/empty - no failure
    bytes executionContext = 3;
}

service EventHandlers {
    rpc Connect(stream EventHandlerClientToRuntimeResponse) returns(stream EventHandlerRuntimeToClientRequest);
}